bench_access_tree/legacy/parser/zparser.output
Terminals unused in grammar

    "end of line"
    "OpenABEUInteger"
    "OpenABE tree node"
    "OpenABE attribute list"
    "of"
    "="
    "error"


State 22 conflicts: 1 shift/reduce
State 23 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce


Grammar

    0 $accept: start "end of file"

    1 start: "[0]:" policy
    2      | "[1]:" attrlist

    3 number: "an integer" '#' "an integer"
    4       | "an integer"

    5 policy: "string"
    6       | policy OR policy
    7       | policy AND policy
    8       | "string" '<' number
    9       | "string" '>' number
   10       | "string" "<=" number
   11       | "string" ">=" number
   12       | "string" "==" number
   13       | '(' policy ')'
   14       | "string" "in" '(' number '-' number ')'
   15       | "string" "in" '{' number '-' number '}'
   16       | "string" '=' "string" number ',' number
   17       | "string" '=' "string" number '-' number ',' number
   18       | "string" '>' "string" number ',' number
   19       | "string" '<' "string" number ',' number
   20       | "string" ">=" "string" number ',' number
   21       | "string" "<=" "string" number ',' number

   22 attrlist: "string"
   23         | '|' attrlist
   24         | attrlist '|'
   25         | attrlist '|' attrlist
   26         | "string" '=' number
   27         | "string" '=' "string" number ',' number


Terminals, with rules where they appear

    "end of file" (0) 0
    '#' (35) 3
    '(' (40) 13 14
    ')' (41) 13 14
    ',' (44) 16 17 18 19 20 21 27
    '-' (45) 14 15 17
    '<' (60) 8 19
    '=' (61) 16 17 26 27
    '>' (62) 9 18
    '{' (123) 15
    '|' (124) 23 24 25
    '}' (125) 15
    error (256)
    "end of line" (258)
    "string" <stringVal> (259) 5 8 9 10 11 12 14 15 16 17 18 19 20 21 22 26 27
    "an integer" <uintVal> (260) 3 4
    "OpenABEUInteger" <uInteger> (261)
    "OpenABE tree node" <treeNode> (262)
    "OpenABE attribute list" <oabeAttrList> (263)
    OR (264) 6
    AND (265) 7
    "of" (266)
    "==" (267) 12
    "=" (268)
    "<=" (269) 10 21
    ">=" (270) 11 20
    "error" (271)
    "[0]:" (272) 1
    "[1]:" (273) 2
    "in" (274) 14 15


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    start (32)
        on left: 1 2
        on right: 0
    number <uInteger> (33)
        on left: 3 4
        on right: 8 9 10 11 12 14 15 16 17 18 19 20 21 26 27
    policy <treeNode> (34)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 1 6 7 13
    attrlist <oabeAttrList> (35)
        on left: 22 23 24 25 26 27
        on right: 2 23 24 25


State 0

    0 $accept: . start "end of file"

    "[0]:"  shift, and go to state 1
    "[1]:"  shift, and go to state 2

    start  go to state 3


State 1

    1 start: "[0]:" . policy

    "string"  shift, and go to state 4
    '('       shift, and go to state 5

    policy  go to state 6


State 2

    2 start: "[1]:" . attrlist

    "string"  shift, and go to state 7
    '|'       shift, and go to state 8

    attrlist  go to state 9


State 3

    0 $accept: start . "end of file"

    "end of file"  shift, and go to state 10


State 4

    5 policy: "string" .
    8       | "string" . '<' number
    9       | "string" . '>' number
   10       | "string" . "<=" number
   11       | "string" . ">=" number
   12       | "string" . "==" number
   14       | "string" . "in" '(' number '-' number ')'
   15       | "string" . "in" '{' number '-' number '}'
   16       | "string" . '=' "string" number ',' number
   17       | "string" . '=' "string" number '-' number ',' number
   18       | "string" . '>' "string" number ',' number
   19       | "string" . '<' "string" number ',' number
   20       | "string" . ">=" "string" number ',' number
   21       | "string" . "<=" "string" number ',' number

    "=="  shift, and go to state 11
    "<="  shift, and go to state 12
    ">="  shift, and go to state 13
    "in"  shift, and go to state 14
    '<'   shift, and go to state 15
    '>'   shift, and go to state 16
    '='   shift, and go to state 17

    $default  reduce using rule 5 (policy)


State 5

   13 policy: '(' . policy ')'

    "string"  shift, and go to state 4
    '('       shift, and go to state 5

    policy  go to state 18


State 6

    1 start: "[0]:" policy .
    6 policy: policy . OR policy
    7       | policy . AND policy

    OR   shift, and go to state 19
    AND  shift, and go to state 20

    $default  reduce using rule 1 (start)


State 7

   22 attrlist: "string" .
   26         | "string" . '=' number
   27         | "string" . '=' "string" number ',' number

    '='  shift, and go to state 21

    $default  reduce using rule 22 (attrlist)


State 8

   23 attrlist: '|' . attrlist

    "string"  shift, and go to state 7
    '|'       shift, and go to state 8

    attrlist  go to state 22


State 9

    2 start: "[1]:" attrlist .
   24 attrlist: attrlist . '|'
   25         | attrlist . '|' attrlist

    '|'  shift, and go to state 23

    $default  reduce using rule 2 (start)


State 10

    0 $accept: start "end of file" .

    $default  accept


State 11

   12 policy: "string" "==" . number

    "an integer"  shift, and go to state 24

    number  go to state 25


State 12

   10 policy: "string" "<=" . number
   21       | "string" "<=" . "string" number ',' number

    "string"      shift, and go to state 26
    "an integer"  shift, and go to state 24

    number  go to state 27


State 13

   11 policy: "string" ">=" . number
   20       | "string" ">=" . "string" number ',' number

    "string"      shift, and go to state 28
    "an integer"  shift, and go to state 24

    number  go to state 29


State 14

   14 policy: "string" "in" . '(' number '-' number ')'
   15       | "string" "in" . '{' number '-' number '}'

    '('  shift, and go to state 30
    '{'  shift, and go to state 31


State 15

    8 policy: "string" '<' . number
   19       | "string" '<' . "string" number ',' number

    "string"      shift, and go to state 32
    "an integer"  shift, and go to state 24

    number  go to state 33


State 16

    9 policy: "string" '>' . number
   18       | "string" '>' . "string" number ',' number

    "string"      shift, and go to state 34
    "an integer"  shift, and go to state 24

    number  go to state 35


State 17

   16 policy: "string" '=' . "string" number ',' number
   17       | "string" '=' . "string" number '-' number ',' number

    "string"  shift, and go to state 36


State 18

    6 policy: policy . OR policy
    7       | policy . AND policy
   13       | '(' policy . ')'

    OR   shift, and go to state 19
    AND  shift, and go to state 20
    ')'  shift, and go to state 37


State 19

    6 policy: policy OR . policy

    "string"  shift, and go to state 4
    '('       shift, and go to state 5

    policy  go to state 38


State 20

    7 policy: policy AND . policy

    "string"  shift, and go to state 4
    '('       shift, and go to state 5

    policy  go to state 39


State 21

   26 attrlist: "string" '=' . number
   27         | "string" '=' . "string" number ',' number

    "string"      shift, and go to state 40
    "an integer"  shift, and go to state 24

    number  go to state 41


State 22

   23 attrlist: '|' attrlist .
   24         | attrlist . '|'
   25         | attrlist . '|' attrlist

    '|'  shift, and go to state 23

    '|'       [reduce using rule 23 (attrlist)]
    $default  reduce using rule 23 (attrlist)


State 23

   24 attrlist: attrlist '|' .
   25         | attrlist '|' . attrlist

    "string"  shift, and go to state 7
    '|'       shift, and go to state 8

    '|'       [reduce using rule 24 (attrlist)]
    $default  reduce using rule 24 (attrlist)

    attrlist  go to state 42


State 24

    3 number: "an integer" . '#' "an integer"
    4       | "an integer" .

    '#'  shift, and go to state 43

    $default  reduce using rule 4 (number)


State 25

   12 policy: "string" "==" number .

    $default  reduce using rule 12 (policy)


State 26

   21 policy: "string" "<=" "string" . number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 44


State 27

   10 policy: "string" "<=" number .

    $default  reduce using rule 10 (policy)


State 28

   20 policy: "string" ">=" "string" . number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 45


State 29

   11 policy: "string" ">=" number .

    $default  reduce using rule 11 (policy)


State 30

   14 policy: "string" "in" '(' . number '-' number ')'

    "an integer"  shift, and go to state 24

    number  go to state 46


State 31

   15 policy: "string" "in" '{' . number '-' number '}'

    "an integer"  shift, and go to state 24

    number  go to state 47


State 32

   19 policy: "string" '<' "string" . number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 48


State 33

    8 policy: "string" '<' number .

    $default  reduce using rule 8 (policy)


State 34

   18 policy: "string" '>' "string" . number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 49


State 35

    9 policy: "string" '>' number .

    $default  reduce using rule 9 (policy)


State 36

   16 policy: "string" '=' "string" . number ',' number
   17       | "string" '=' "string" . number '-' number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 50


State 37

   13 policy: '(' policy ')' .

    $default  reduce using rule 13 (policy)


State 38

    6 policy: policy . OR policy
    6       | policy OR policy .
    7       | policy . AND policy

    AND  shift, and go to state 20

    $default  reduce using rule 6 (policy)


State 39

    6 policy: policy . OR policy
    7       | policy . AND policy
    7       | policy AND policy .

    $default  reduce using rule 7 (policy)


State 40

   27 attrlist: "string" '=' "string" . number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 51


State 41

   26 attrlist: "string" '=' number .

    $default  reduce using rule 26 (attrlist)


State 42

   24 attrlist: attrlist . '|'
   25         | attrlist . '|' attrlist
   25         | attrlist '|' attrlist .

    '|'  shift, and go to state 23

    '|'       [reduce using rule 25 (attrlist)]
    $default  reduce using rule 25 (attrlist)


State 43

    3 number: "an integer" '#' . "an integer"

    "an integer"  shift, and go to state 52


State 44

   21 policy: "string" "<=" "string" number . ',' number

    ','  shift, and go to state 53


State 45

   20 policy: "string" ">=" "string" number . ',' number

    ','  shift, and go to state 54


State 46

   14 policy: "string" "in" '(' number . '-' number ')'

    '-'  shift, and go to state 55


State 47

   15 policy: "string" "in" '{' number . '-' number '}'

    '-'  shift, and go to state 56


State 48

   19 policy: "string" '<' "string" number . ',' number

    ','  shift, and go to state 57


State 49

   18 policy: "string" '>' "string" number . ',' number

    ','  shift, and go to state 58


State 50

   16 policy: "string" '=' "string" number . ',' number
   17       | "string" '=' "string" number . '-' number ',' number

    '-'  shift, and go to state 59
    ','  shift, and go to state 60


State 51

   27 attrlist: "string" '=' "string" number . ',' number

    ','  shift, and go to state 61


State 52

    3 number: "an integer" '#' "an integer" .

    $default  reduce using rule 3 (number)


State 53

   21 policy: "string" "<=" "string" number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 62


State 54

   20 policy: "string" ">=" "string" number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 63


State 55

   14 policy: "string" "in" '(' number '-' . number ')'

    "an integer"  shift, and go to state 24

    number  go to state 64


State 56

   15 policy: "string" "in" '{' number '-' . number '}'

    "an integer"  shift, and go to state 24

    number  go to state 65


State 57

   19 policy: "string" '<' "string" number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 66


State 58

   18 policy: "string" '>' "string" number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 67


State 59

   17 policy: "string" '=' "string" number '-' . number ',' number

    "an integer"  shift, and go to state 24

    number  go to state 68


State 60

   16 policy: "string" '=' "string" number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 69


State 61

   27 attrlist: "string" '=' "string" number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 70


State 62

   21 policy: "string" "<=" "string" number ',' number .

    $default  reduce using rule 21 (policy)


State 63

   20 policy: "string" ">=" "string" number ',' number .

    $default  reduce using rule 20 (policy)


State 64

   14 policy: "string" "in" '(' number '-' number . ')'

    ')'  shift, and go to state 71


State 65

   15 policy: "string" "in" '{' number '-' number . '}'

    '}'  shift, and go to state 72


State 66

   19 policy: "string" '<' "string" number ',' number .

    $default  reduce using rule 19 (policy)


State 67

   18 policy: "string" '>' "string" number ',' number .

    $default  reduce using rule 18 (policy)


State 68

   17 policy: "string" '=' "string" number '-' number . ',' number

    ','  shift, and go to state 73


State 69

   16 policy: "string" '=' "string" number ',' number .

    $default  reduce using rule 16 (policy)


State 70

   27 attrlist: "string" '=' "string" number ',' number .

    $default  reduce using rule 27 (attrlist)


State 71

   14 policy: "string" "in" '(' number '-' number ')' .

    $default  reduce using rule 14 (policy)


State 72

   15 policy: "string" "in" '{' number '-' number '}' .

    $default  reduce using rule 15 (policy)


State 73

   17 policy: "string" '=' "string" number '-' number ',' . number

    "an integer"  shift, and go to state 24

    number  go to state 74


State 74

   17 policy: "string" '=' "string" number '-' number ',' number .

    $default  reduce using rule 17 (policy)
